Fix Dashboard Tariff Empty View Alignment

--- a/wp-content/themes/impruwclientparent/css/less/dashboard.less
+++ b/wp-content/themes/impruwclientparent/css/less/dashboard.less
@@ -2411,7 +2411,7 @@ form {
 								text-align: center;
 								color: @dash-grey;
 								.no-data {
-									min-height: 77px;
+									min-height: 81px;
 									display: block;
 									text-align: center;
 									color: lighten(@dash-grey, 10%);
